RESOLVED FIXED79025
Web Inspector: DOMAttrModified should not be fired if the attribute value remains the same
https://bugs.webkit.org/show_bug.cgi?id=79025
Summary Web Inspector: DOMAttrModified should not be fired if the attribute value rem...
Alexander Pavlov (apavlov)
Reported 2012-02-20 04:30:14 PST
1. Go to http://sysnetik.com/labs/dna-model/ 2. Right click canvas -> Inspect element 3. Click the canvas element in the inspector to open it Really slow to toggle on/off, high cpu usage Diagnosis from pfeldman@: "The problem here is that canvas element is getting the width property set continuously (to 260 in my case). It propagates into the front-end as attribute modification. It does boost the CPU usage on the scene from 25% to 90% on my box. We should not send attribute modified signal to the front-end in case the value has not changed." Upstreaming http://code.google.com/p/chromium/issues/detail?id=112630
Attachments
Patch (10.20 KB, patch)
2012-02-20 05:04 PST, Alexander Pavlov (apavlov)
pfeldman: review+
Alexander Pavlov (apavlov)
Comment 1 2012-02-20 05:04:55 PST
Alexander Pavlov (apavlov)
Comment 2 2012-02-20 05:11:58 PST
Note You need to log in before you can comment on or make changes to this bug.