Web Inspector: DOMAttrModified should not be fired if the attribute value remains the same https://bugs.webkit.org/show_bug.cgi?id=79025

Reviewed by Pavel Feldman.

Source/WebCore:

* dom/Element.cpp:
(WebCore::Element::willModifyAttribute):
* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::InspectorDOMAgent):
(WebCore::InspectorDOMAgent::willModifyDOMAttr):
(WebCore):
(WebCore::InspectorDOMAgent::didModifyDOMAttr):
* inspector/InspectorDOMAgent.h:
(InspectorDOMAgent):
* inspector/InspectorInstrumentation.cpp:
(WebCore::InspectorInstrumentation::willModifyDOMAttrImpl):
* inspector/InspectorInstrumentation.h:
(InspectorInstrumentation):
(WebCore::InspectorInstrumentation::willModifyDOMAttr):

LayoutTests:

* inspector/elements/set-attribute-expected.txt:
* inspector/elements/set-attribute.html:

Canonical link: https://commits.webkit.org/96056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108235 268f45cc-cd09-0410-ab3c-d52691b4dbfc